feat: added methods in App